# easyfatt-db-connector

./: LICENSE  README.md  pyproject.toml
src/easyfatt_db_connector/: __init__.py  constants.py  downloader.py  test.py
src/easyfatt_db_connector/core/: __init__.py  exceptions.py
src/easyfatt_db_connector/core/connection/: __init__.py  _base.py  _fdb.py  _sqlalchemy.py
src/easyfatt_db_connector/core/methods/: fdb.py  sqlalchemy.py
src/easyfatt_db_connector/orm/: __init__.py
src/easyfatt_db_connector/orm/dynamic/: factory.py
src/easyfatt_db_connector/orm/static/: __init__.py  models.py
src/easyfatt_db_connector/utils/: decorators.py  downloader.py
src/easyfatt_db_connector/xml/: README.md  __init__.py  common.py  company.py  document.py  product.py  root.py  vat_code.py
src/easyfatt_db_connector/xml/common/: README.md  __init__.py  fields.py  mapper.py
tests/: test_fdb.py
